# IAR-CMSIS-DSP

./: .gitattributes  .gitignore  .gitmodules  README.md
.github/workflows/: ci.yml
Examples/: CMSIS-DSP_Examples.eww  CMakeLists.txt  README.md  arm_bayes_example.ewp  arm_class_marks_example.ewp  arm_convolution_example.ewp  arm_dotproduct_example.ewp  arm_fft_bin_example.ewp  arm_fir_example.ewp  arm_graphic_equalizer_example.ewp  arm_linear_interp_example.ewp  arm_matrix_example.ewp  arm_signal_converge_example.ewp  arm_sin_cos_example.ewp  arm_svm_example.ewp  arm_variance_example.ewp  cmake-all.sh  cspybat.cmake  ctest-all.sh  iccarm.cmake
